--- a/photomark.css
+++ b/photomark.css
@@ -48,7 +48,7 @@
 
 body {
     -webkit-user-select: none;
-            user-select: none;
+    user-select: none;
     font-family: MiSans;
 }
 
@@ -72,15 +72,19 @@ body {
     font-family: MiSans;
 }
 
-.mdui-snackbar {
-    -webkit-box-shadow: 0 3px 1px -2px rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12)!important;
-            box-shadow: 0 3px 1px -2px rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12)!important;
-}
-
 h1 {
     font-weight: bold;
 }
 
 .preview-dialog .mdui-dialog-content {
     padding: 0;
+}
+
+@media (min-width: 600px) {
+    .mdui-snackbar-right-top {
+        -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12) !important;
+                box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12) !important;
+
+        border-radius: 6px;
+    }
 }
